:kissing_cat: Добавляет сборку precss в gulp

--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "description": "Личный проект «Мишка» от HTML Academy",
   "devDependencies": {
     "autoprefixer": "6.7.x",
-    "grunt": "1.0.1",
-    "grunt-browser-sync": "2.2.0",
-    "grunt-contrib-less": "1.4.0",
-    "grunt-contrib-watch": "1.0.0",
-    "grunt-postcss": "0.8.0",
-    "@htmlacademy/editorconfig-cli": "0.1.x"
+    "browser-sync": "2.18.8",
+    "gulp": "3.9.1",
+    "gulp-plumber": "1.1.0",
+    "gulp-postcss": "6.3.0",
+    "@htmlacademy/editorconfig-cli": "0.1.x",
+    "precss": "1.4.0"
   },
   "scripts": {
     "test": "editorconfig-cli",
-    "build": "grunt less && grunt postcss",
-    "start": "npm run build && grunt serve"
+    "build": "gulp style",
+    "start": "gulp serve"
   },
   "editorconfig-cli": [
     "*.html",
@@ -23,7 +23,7 @@
     "*.js",
     "js/**/*.js",
     "img/**/*.svg",
-    "less/**/*.less"
+    "postcss/**/*.{css,pcss}"
   ],
   "engines": {
     "node": "6.10"
